fixed specialize section margins on small devices

--- a/app/styles/specialize.css
+++ b/app/styles/specialize.css
@@ -12,6 +12,12 @@
   background-color: #fff;
 }
 
+@media(max-width:991px) {
+    .specialize-card {
+        margin-bottom: 50px;
+    }
+}
+
 .specialize .border {
   border: 1px solid #C4C4C4;
 }
